<resources>
    <string name="app_name">GeoWalk</string>
    <string name="map_title">Carte</string>
    <string name="map_label_score">Score : %d</string>
    <string name="map_bases_add">Ajouter une base ici</string>
    <string name="scanner_title">Scanner</string>
    <string name="login_login">Connection</string>
    <string name="login_signup">Inscription</string>
    <string name="login_label_password">Mots de passe</string>
    <string name="login_label_email">Adresse e-mail</string>
    <string name="login_hint_email">abc@zyx.com</string>
    <string name="login_hint_password">12345678</string>
    <string name="login_error_password_short">Mot de passe trop court (minimum 8 caractères)</string>
    <string name="login_error_password_incorrect">Mots de passe incorrect</string>
    <string name="title_activity_score">Scores</string>
    <string name="register_hint_username">Nom d\'utilisateur</string>
    <string name="register_label_username">Nom d\'utilisateur</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="permission_dialog">Vous devez ajouter les droits pour que cette application marche.\nL\'application va maintenant se fermer</string>
    <string name="closing">Fermeture</string>
    <string name="ok">OK</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="exit_dialog">Etes vous sur de vouloir quitter ?</string>
    <string name="gps_not_found">GPS introuvable</string>
    <string name="gps_activate">Voulez vous l\'activer ?\n(l\'application ne fonctionnera pas sans)</string>
</resources>
